DB finished and partialy implemented the rest API
